--- a/division/logging.conf
+++ b/division/logging.conf
@@ -18,14 +18,14 @@ qualname=Division_Client
 
 [handler_consoleHandler]
 class=StreamHandler
-level=DEBUG
+level=ERROR
 formatter=myFormatter
 args=(sys.stdout,)
 
 [handler_fileHandler]
 class=FileHandler
 formatter=myFormatter
-args=("config.log",)
+args=("division_client.log",)
 
 [formatter_myFormatter]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
